Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -120,7 +120,7 @@
         "XK9REonP1NwI",
         "71RWUsr01OEe"
       ],
-      "authorship_tag": "ABX9TyO8LATbmUNpa2ciBxwGcUQ+",
+      "authorship_tag": "ABX9TyMoF7n4IibDSIHT5hgmcDKa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5309,7 +5309,7 @@
         "\n",
         "print(res)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5367,7 +5367,7 @@
         "id": "XK9REonP1NwI"
       },
       "source": [
-        "### **단계 : ===========**"
+        "### 18단계 : 스택===========**"
       ]
     },
     {
@@ -5376,13 +5376,154 @@
         "id": "ZPZhedpd1NwI"
       },
       "source": [
-        "#### "
+        "#### 10828"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "76yklUef1NwJ"
+      },
+      "source": [
+        "import sys\n",
+        "\n",
+        "n = int(input())\n",
+        "s = []\n",
+        "for _ in range(n):\n",
+        "    x = sys.stdin.readline().split()\n",
+        "    if x[0] == 'push':\n",
+        "        s.append(int(x[1]))\n",
+        "    elif x[0] == 'pop':\n",
+        "        if len(s) == 0:\n",
+        "            print(-1)\n",
+        "        else:\n",
+        "            print(s.pop())\n",
+        "    elif x[0] == 'size':\n",
+        "        print(len(s))\n",
+        "    elif x[0] == 'empty':\n",
+        "        if s == []:\n",
+        "            print(1)\n",
+        "        else:\n",
+        "            print(0)\n",
+        "    elif x[0] == 'top':\n",
+        "        if len(s) == 0:\n",
+        "            print(-1)\n",
+        "        else:\n",
+        "            print(s[-1])\n",
+        "    else:\n",
+        "        pass"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HEGePEEYxsNm"
+      },
+      "source": [
+        "####  10773번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Y4P0AJ4vxsNn"
+      },
+      "source": [
+        "import sys\n",
+        "\n",
+        "n = int(input())\n",
+        "\n",
+        "l = []\n",
+        "for _ in range(n):\n",
+        "    x = int(sys.stdin.readline())\n",
+        "    if x == 0:\n",
+        "        try:\n",
+        "            l.pop()\n",
+        "        except:\n",
+        "            pass\n",
+        "    else:\n",
+        "        l.append(x)\n",
+        "\n",
+        "print(sum(l))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Zs31oUZxxsg7"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dSmaZ_owxsg8"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jXYx1DRXxsog"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gI9XWF03xsoh"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2SovrMekxsrx"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OzO8uQ57xsry"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8I05magqxsvh"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YEaodDK1xsvi"
       },
       "source": [
         ""
