Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -34,16 +34,6 @@
         "Sn6GYlulJ5rI",
         "zvtcqUZyJ5uA",
         "RVUMmYudeX57",
-        "2H2UiCRZJ55E",
-        "8aEgFHzQTU-M",
-        "x3MW5qqtTZAn",
-        "NZwKoUdcTbp-",
-        "ZGJGxU4LTcWc",
-        "_bivMt1sTchd",
-        "UlRjxI8VTcoB",
-        "FCPITXGwTcsi",
-        "M75SACDgTcxe",
-        "aE-p8rLrTc2U",
         "L635P9aDR41L",
         "d5l3XgZ3R41L",
         "KrC88VwzOnqU",
@@ -72,11 +62,6 @@
         "4_uTqdNmIjzA",
         "_bKHA0lrIj6l",
         "UaFH5L6zTDVu",
-        "zu0qQkqvTDVz",
-        "L3mEbN4iMdEM",
-        "fGK6XiQ4MdHJ",
-        "3LicNHImMdKU",
-        "9zMkFXkfMdOm",
         "NTQ_ay5yTJtQ",
         "Rv4kaoPHTJtR",
         "_GihlXpZv_jE",
@@ -116,11 +101,26 @@
         "Hc6V32u4pVUa",
         "pNoCqLvepVX5",
         "PPg8gdeSpVbw",
+        "meZqnuly1Ns1",
+        "xKIhI97D1Ns-",
+        "JLA5o1_kG4_y",
+        "CO66sh-WEVOS",
+        "pRqth93HG5Fp",
+        "QD5eQtFaEU3c",
         "cYhC8xLCEU6x",
-        "XK9REonP1NwI",
+        "9oUY6nyKG5Cy",
+        "yx3yQcgXEU9t",
+        "gPapbiVAbmMj",
+        "O-ZSdkmYbmRa",
+        "ixkMO17DbmWw",
+        "u9tipfTwbmbn",
+        "ZPZhedpd1NwI",
+        "HEGePEEYxsNm",
+        "Zs31oUZxxsg7",
+        "jXYx1DRXxsog",
         "71RWUsr01OEe"
       ],
-      "authorship_tag": "ABX9TyMoF7n4IibDSIHT5hgmcDKa",
+      "authorship_tag": "ABX9TyNhy1B4/4ipAhRxf6mh3Ua/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5457,7 +5457,7 @@
         "id": "Zs31oUZxxsg7"
       },
       "source": [
-        "#### "
+        "####  9012번"
       ]
     },
     {
@@ -5466,7 +5466,25 @@
         "id": "dSmaZ_owxsg8"
       },
       "source": [
-        ""
+        "import sys\n",
+        "\n",
+        "n = int(input())\n",
+        "\n",
+        "for _ in range(n):\n",
+        "    x = sys.stdin.readline().rstrip('\\n')\n",
+        "    t = 0\n",
+        "    for i in range(len(x)):\n",
+        "        if t < 0:\n",
+        "            break\n",
+        "        if x[i] == '(':\n",
+        "            t += 1\n",
+        "        else:\n",
+        "            t -= 1\n",
+        "    \n",
+        "    if t == 0:\n",
+        "        print('YES')\n",
+        "    else:\n",
+        "        print('NO')"
       ],
       "execution_count": null,
       "outputs": []
@@ -5477,7 +5495,7 @@
         "id": "jXYx1DRXxsog"
       },
       "source": [
-        "#### "
+        "####  4949번"
       ]
     },
     {
@@ -5486,7 +5504,61 @@
         "id": "gI9XWF03xsoh"
       },
       "source": [
-        ""
+        "import sys\n",
+        "\n",
+        "l = []\n",
+        "x = ''\n",
+        "while True:\n",
+        "    i = sys.stdin.readline().rstrip('\\n')\n",
+        "    if i == '.':\n",
+        "        break\n",
+        "\n",
+        "    if i[-1] == '.':\n",
+        "        x += i\n",
+        "        res = []\n",
+        "        for j in range(len(x)):\n",
+        "            if x[j] == '(' or x[j] == ')' or x[j] == '[' or x[j] == ']':\n",
+        "                res += x[j]\n",
+        "            else:\n",
+        "                continue\n",
+        "            \n",
+        "        l.append(res)\n",
+        "        x = ''\n",
+        "    else:\n",
+        "        x += i\n",
+        "\n",
+        "for i in l:\n",
+        "    t = []\n",
+        "    for j in range(len(i)):\n",
+        "        if i[j] == '(':\n",
+        "            t.append(1)\n",
+        "        elif i[j] == '[':\n",
+        "            t.append(2)\n",
+        "        elif i[j] == ')':\n",
+        "            if t == []:\n",
+        "                t = [False]\n",
+        "                break\n",
+        "            else:\n",
+        "                if t[-1] == 1:\n",
+        "                    t.pop()\n",
+        "                else:\n",
+        "                    break\n",
+        "        elif i[j] == ']':\n",
+        "            if t == []:\n",
+        "                t = [False]\n",
+        "                break\n",
+        "            else:\n",
+        "                if t[-1] == 2:\n",
+        "                    t.pop()\n",
+        "                else:\n",
+        "                    break\n",
+        "        else:\n",
+        "            continue\n",
+        "\n",
+        "    if t == []:\n",
+        "        print('yes')\n",
+        "    else:\n",
+        "        print('no')"
       ],
       "execution_count": null,
       "outputs": []
@@ -5497,7 +5569,7 @@
         "id": "2SovrMekxsrx"
       },
       "source": [
-        "#### "
+        "####  1874번"
       ]
     },
     {
@@ -5506,7 +5578,37 @@
         "id": "OzO8uQ57xsry"
       },
       "source": [
-        ""
+        "import sys\n",
+        "\n",
+        "n = int(input())\n",
+        "\n",
+        "s = []\n",
+        "for _ in range(n):\n",
+        "    s.append(int(sys.stdin.readline())) # sys.stdin.readline\n",
+        "\n",
+        "l = 1\n",
+        "t = []\n",
+        "c = True\n",
+        "\n",
+        "result = []\n",
+        "\n",
+        "for i in s:\n",
+        "    if i >= l:\n",
+        "        t += [x for x in range(l, i+1)]\n",
+        "        result += ['+'] * (i - l + 1)\n",
+        "        l = i + 1        \n",
+        "    \n",
+        "    if t.pop() != i:\n",
+        "        c = False\n",
+        "        break\n",
+        "\n",
+        "    result.append('-')\n",
+        "\n",
+        "if c:\n",
+        "    for i in result:\n",
+        "        print(i)\n",
+        "else:\n",
+        "    print('NO')"
       ],
       "execution_count": null,
       "outputs": []
