Colaboratory를 통해 생성됨

--- a/문제해결프로그래밍.ipynb
+++ b/문제해결프로그래밍.ipynb
@@ -3,10 +3,20 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "2021_2학기_문제해결프로그래밍_과제.ipynb",
+      "name": "문제해결프로그래밍.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPQErfWo6X2bo61RsVU18mU",
+      "collapsed_sections": [
+        "swr8l3oAQIbG",
+        "C3p2V_EE6HdA",
+        "vd-eMhd63UgY",
+        "fPdoPbDl3Xgt",
+        "Y-kWfKBI3XoK",
+        "gPIJXHar3XrB",
+        "T5wbiAyw3Xt4",
+        "63PbcOYstRvs",
+        "rOjcJJoYtXZd"
+      ],
+      "authorship_tag": "ABX9TyN2fucTMdBBNAc5DlRmiSek",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +35,16 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/tjy2202/Problem_Solving/blob/master/2021_2%ED%95%99%EA%B8%B0_%EB%AC%B8%EC%A0%9C%ED%95%B4%EA%B2%B0%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D_%EA%B3%BC%EC%A0%9C.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/tjy2202/Problem_Solving/blob/master/%EB%AC%B8%EC%A0%9C%ED%95%B4%EA%B2%B0%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "in6uiAVe5B4-"
+      },
+      "source": [
+        "# 2021_2학기_문제해결프로그래밍_과제"
       ]
     },
     {
@@ -2031,7 +2050,7 @@
         "\n",
         "\toutput()\n"
       ],
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2210,8 +2229,83 @@
         "id": "wDGrdIDhtWp1"
       },
       "source": [
-        "# 9주차"
+        "# 11주차"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bWz7FSJ9jDcJ"
+      },
+      "source": [
+        "### w11/p1 두 색으로 칠하기(Bicoloring)\n",
+        "def BFS(graph):\n",
+        "\tvertex_num = len(graph)\n",
+        "\n",
+        "\t#  색은 1과 2로 이루어져있다. 0이면 방문하지 않은 것\n",
+        "\tcolor_of_vertex = [0 for _ in range(vertex_num)]\n",
+        "\n",
+        "\t# 현재 칠할 공간\n",
+        "\tcurrent_vertex = 0\n",
+        "\tcolor_of_vertex[current_vertex] = 1\n",
+        "\tqueue = [0]\n",
+        "\t#print(color_of_vertex)\n",
+        "\t#print(graph)\n",
+        "\t# queue가 빌 때 까지 진행\n",
+        "\twhile len(queue)>0:\n",
+        "\n",
+        "\t\tcurrent_vertex = queue.pop()\n",
+        "\t\tnext_color = 0\n",
+        "\n",
+        "\t\t# 현재 vertex와 색깔이 다르도록 다음 색깔을 지정\n",
+        "\t\tif color_of_vertex[current_vertex] == 1:\n",
+        "\t\t\tnext_color = 2\n",
+        "\t\telse:\n",
+        "\t\t\tnext_color = 1\n",
+        "\n",
+        "\t\t# 인접 vertex들의 색을 지정해주기\n",
+        "\t\tfor i in graph[current_vertex]:\n",
+        "\t\t\t'''\n",
+        "\t\t\t코드 작성\n",
+        "\t\t\t'''\n",
+        "\t\t\tif color_of_vertex[i] == 0: # 현재 vertex를 방문한적 없다면 색깔을 지정해주고 queue에 넣어주기\n",
+        "\t\t\t\tcolor_of_vertex[i] = next_color\n",
+        "\t\t\t\tqueue.append(i)\n",
+        "\t\t\telse: \t# 방문한 적이 있다면 다음 색과 같은 지 확인. 다르다면 bicolorable하지 않은 것으로 False 반환\n",
+        "\t\t\t\tif next_color == color_of_vertex[i]:\n",
+        "\t\t\t\t\tcontinue\n",
+        "\t\t\t\telse:\n",
+        "\t\t\t\t\treturn False\n",
+        "\n",
+        "\treturn True\n",
+        "\n",
+        "try:\n",
+        "\twhile True:\n",
+        "\t\t# 입력 받기\n",
+        "\t\tvertex = int(input())\n",
+        "\t\tedge = int(input())\n",
+        "\n",
+        "\t\tgraph = [[] for i in range(vertex)]\n",
+        "\n",
+        "\t\tfor i in range(edge):\n",
+        "\t\t\tv1, v2 = map(int, input().split())\n",
+        "\t\t\tgraph[v1].append(v2)\n",
+        "\t\t\tgraph[v2].append(v1)\n",
+        "\n",
+        "\t\t# BFS를 통해 탐색 시작\n",
+        "\t\tresult = BFS(graph)\n",
+        "\n",
+        "\t\tif result:\n",
+        "\t\t\tprint(\"BICOLORABLE.\")\n",
+        "\t\telse:\n",
+        "\t\t\tprint(\"NOT BICOLORABLE.\")\n",
+        "\n",
+        "\n",
+        "except EOFError:\n",
+        "\texit()"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2219,7 +2313,89 @@
         "id": "xekvC5UZtWp2"
       },
       "source": [
-        ""
+        "### w11/p2 원판돌리기(Playing With Wheels)\n",
+        "# 최소 회전을 구하는 함수\n",
+        "def DFS(current_state, final_state, graph):\n",
+        "\n",
+        "\t# DFS를 하기위해 사용할 queue들\n",
+        "\tqueue = [current_state]\n",
+        "\t\n",
+        "\twhile len(queue)!=0:\n",
+        "\t\tn1, n2, n3, n4 = queue.pop(0)\n",
+        "\t\t# 현재 상태와 최종 상태가 같다면 지금가지 계산한 횟수를 return\n",
+        "\t\tif final_state == [n1, n2, n3, n4]:\n",
+        "\t\t\treturn graph[n1][n2][n3][n4]\n",
+        "\t\t\n",
+        "\t\t# 숫자가 4개이기 떄문에 4개를 각각 돌려줘야함\n",
+        "\n",
+        "\t\t# 천의 자리 수를 오른쪽 버튼을 눌러서 1 증가시킨다.\n",
+        "\t\tif -1 < graph[(n1+1)%10][n2][n3][n4] < 1 and [(n1+1)%10, n2, n3, n4] not in queue:\n",
+        "\t\t\tgraph[(n1+1)%10][n2][n3][n4] = graph[n1][n2][n3][n4] + 1\n",
+        "\t\t\tqueue.append([(n1+1)%10, n2, n3, n4])\n",
+        "\t\t# 천의 자리 수를 왼쪽 버튼을 눌러서 1 감소시킨다.\n",
+        "\t\tif -1 < graph[(n1-1)%10][n2][n3][n4] < 1 and [(n1-1)%10, n2, n3, n4] not in queue:\n",
+        "\t\t\tgraph[(n1-1)%10][n2][n3][n4] = graph[n1][n2][n3][n4] + 1\n",
+        "\t\t\tqueue.append([(n1-1)%10, n2, n3, n4])\n",
+        "\n",
+        "\t\t# 백의 자리 수를 오른쪽 버튼을 눌러서 1 증가시킨다.\n",
+        "\t\tif -1 < graph[n1][(n2+1)%10][n3][n4] < 1 and [n1, (n2+1)%10, n3, n4] not in queue:\n",
+        "\t\t\tgraph[n1][(n2+1)%10][n3][n4] = graph[n1][n2][n3][n4] + 1\n",
+        "\t\t\tqueue.append([n1, (n2+1)%10, n3, n4])\n",
+        "\t\t# 백의 자리 수를 왼쪽 버튼을 눌러서 1 감소시킨다.\n",
+        "\t\tif -1 < graph[n1][(n2-1)%10][n3][n4] < 1 and [n1, (n2-1)%10, n3, n4] not in queue:\n",
+        "\t\t\tgraph[n1][(n2-1)%10][n3][n4] = graph[n1][n2][n3][n4] + 1\n",
+        "\t\t\tqueue.append([n1, (n2-1)%10, n3, n4])\n",
+        "\n",
+        "\t\t# 십의 자리 수를 오른쪽 버튼을 눌러서 1 증가시킨다.\n",
+        "\t\tif -1 < graph[n1][n2][(n3+1)%10][n4] < 1 and [n1, n2, (n3+1)%10, n4] not in queue:\n",
+        "\t\t\tgraph[n1][n2][(n3+1)%10][n4] = graph[n1][n2][n3][n4] + 1\n",
+        "\t\t\tqueue.append([n1, n2, (n3+1)%10, n4])\n",
+        "\t\t# 십의 자리 수를 왼쪽 버튼을 눌러서 1 감소시킨다.\n",
+        "\t\tif -1 < graph[n1][n2][(n3-1)%10][n4] < 1 and [n1, n2, (n3-1)%10, n4] not in queue:\n",
+        "\t\t\tgraph[n1][n2][(n3-1)%10][n4] = graph[n1][n2][n3][n4] + 1\n",
+        "\t\t\tqueue.append([n1, n2, (n3-1)%10, n4])\n",
+        "\n",
+        "\t\t# 일의 자리 수를 오른쪽 버튼을 눌러서 1 증가시킨다.\n",
+        "\t\tif -1 < graph[n1][n2][n3][(n4+1)%10] < 1 and [n1, n2, n3, (n4+1)%10] not in queue:\n",
+        "\t\t\tgraph[n1][n2][n3][(n4+1)%10] = graph[n1][n2][n3][n4] + 1\n",
+        "\t\t\tqueue.append([n1, n2, n3, (n4+1)%10])\n",
+        "\t\t# 일의 자리 수를 왼쪽 버튼을 눌러서 1 감소시킨다.\n",
+        "\t\tif -1 < graph[n1][n2][n3][(n4-1)%10] < 1 and [n1, n2, n3, (n4-1)%10] not in queue:\n",
+        "\t\t\tgraph[n1][n2][n3][(n4-1)%10] = graph[n1][n2][n3][n4] + 1\n",
+        "\t\t\tqueue.append([n1, n2, n3, (n4-1)%10])\n",
+        "\n",
+        "\n",
+        "\t# DFS를 끝날때까지 최종 상태로 가지 못했기 때문에 -1를 반환함\n",
+        "\treturn -1\n",
+        "\n",
+        "# input\n",
+        "testcase = int(input())\n",
+        "\n",
+        "for _ in range(testcase):\n",
+        "\n",
+        "\t_ = input()  # white space\n",
+        "\n",
+        "\tstart_state = list(map(int, input().split()))\n",
+        "\tfinal_state = list(map(int, input().split()))\n",
+        "\tforbid = []\n",
+        "\n",
+        "\tn = int(input())\n",
+        "\n",
+        "\t# 4차원 graph를 만들어준다.\n",
+        "\t# 0726이면 graph[0][7][2][6]처럼 표현할 수 있다.\n",
+        "\tgraph = [[[[0 for _ in range(10)] for _ in range(10)] for _ in range(10)] for _ in range(10)]\n",
+        "\n",
+        "\n",
+        "\tfor _ in range(n):\n",
+        "\t\tn1, n2, n3, n4 = map(int, input().split())\n",
+        "\t\t# 가면 안되는 곳은 -1로 채워준다.\n",
+        "\t\tgraph[n1][n2][n3][n4] = -1\n",
+        "\t#print(start_state) # [8, 0, 5, 6]\n",
+        "\t#print(final_state) # [6, 5, 0, 8]\n",
+        "\t#print(graph)\n",
+        "\tcnt = DFS(start_state, final_state, graph)\n",
+        "\n",
+        "\tprint(cnt)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -2230,7 +2406,124 @@
         "id": "_uwepXvltWp2"
       },
       "source": [
-        ""
+        "### w11/p3 황혼에서 새벽까지(From Dusk Till Dawn)\n",
+        "# 전역변수들을 설정해준다.\n",
+        "n = 0; e = 0; ne = 0; start = 0; finish = 0; rechable = False; front = 0; rear = 0;\n",
+        "edges = [[0, 0, 0, 0] for i in range(1000)]\n",
+        "check = [[0, 0] for i in range(1000)] # check[0][0] 첫번째는 각 도시 두번째인덱스에서 0은 혈액량,\n",
+        "city = [0 for i in range(100)]\n",
+        "queue = [0 for i in range(10000)]\n",
+        "\n",
+        "# breadth first search를 진행한다.\n",
+        "def bfs():\n",
+        "\tglobal front, rear, rechable\n",
+        "\n",
+        "\tnow = [0, 0, 0] # 앞쪽, 지금, 뒷쪽\n",
+        "\tfront = 0\n",
+        "\trear = 0\n",
+        "\trechable = False\n",
+        "\tfor i in range(n):\n",
+        "\t\tcheck[i][0] = 10000\n",
+        "\n",
+        "\tqueue[rear] = start\n",
+        "\tcheck[start][0] = 0 # 시작 도시에서의 필요한혈액량 은 0 또는 여행일\n",
+        "\tcheck[start][1] = 0 # 여기에 도착할 수 있는 제일 빠른 시간 18~6\n",
+        "\trear += 1\n",
+        "\n",
+        "\t# 계속 탐색을 해준다.\n",
+        "\twhile(front < rear):\n",
+        "\t\tnow[0] = queue[front] # 현재 도시\n",
+        "\t\tnow[1] = check[now[0]][0] #현재 도시까지 필요 혈액량\n",
+        "\t\tnow[2] = check[now[0]][1] # 다음 도시에서의 도착 시간\n",
+        "\t\tfront += 1\n",
+        "\n",
+        "\t\t# 지금 있는 곳이 탐색 종료 지점이라면\n",
+        "\t\tif now[0] == finish:\n",
+        "\t\t\t# 갈 수 있는 곳이므로 rechable을 True로 바꿔준다.\n",
+        "\t\t\trechable = True\n",
+        "\t\t\tcontinue\n",
+        "\n",
+        "\t\t# 갈 수 있는 시간의 경로들 중에서 확인\n",
+        "\t\tfor i in range(ne):\n",
+        "\t\t\t# 지금 있는 곳이 탐색해야 하는 곳과 다르다면 지나간다.\n",
+        "\t\t\tif edges[i][0] != now[0]:\n",
+        "\t\t\t\tcontinue\n",
+        "\t\t\t# 1. 설정된 다음 위치와 갈 수 있는 위치가 다르다.\n",
+        "\t\t\t# 2. 지금 있는 곳에서 갈 수 있는 곳이 지금 있는 곳과 다르거나\n",
+        "\t\t\t# 3. 다음에 갈 곳이 지금 있는 곳이거나\n",
+        "\t\t\t# 4. 지금 갔던 루트보다 더 짧은 경로를 발견했다면\n",
+        "\t\t\t# 지금 위치에서 갈 수 있는 다음 곳을 찾는다.\n",
+        "\t\t\tif now[2] <= edges[i][2] and (check[edges[i][1]][0] > now[1] or (check[edges[i][1]][0] == now[1] and check[edges[i][1]][1] > edges[i][2] + edges[i][3])):\n",
+        "\t\t\t\t\n",
+        "\t\t\t\t# 현재 도시에서 다음 도시로의 도착시간이 해당 도착역에 출발 시간보다 작은경우 \n",
+        "\t\t\t\t# 그리고 도착 도시에서의 최소 혈액량보다 현재의 혈액량이 작은경우 또는 \n",
+        "\t\t\t\t#혈액량이 같지만 도착 도시에서의 도착 시간보다 현재의 도착 시간이 더 빠른 경우\n",
+        "\t\t\t\t\n",
+        "\t\t\t\tqueue[rear] = edges[i][1] # 더 짧은 경로 설정 큐에다가 도시정보를 입력\n",
+        "\t\t\t\tcheck[edges[i][1]][0] = now[1] # 가장 적은 혈액량 업데이터\n",
+        "\t\t\t\tcheck[edges[i][1]][1] = edges[i][2] + edges[i][3] # 가장 이른 도착 시간업데이터\n",
+        "\t\t\t\t'''\n",
+        "\t\t\t\t코드 작성\n",
+        "\t\t\t\tcheck[edges[i][1]][0] == now[1] # 도시에서 도달하기까지의 누적 혈액량 now[1] 혈액량\n",
+        "\t\t\t\t'''\n",
+        "\t\t\t\trear += 1\n",
+        "\t\t\t# 지금 위치에서 갈 수 있는 곳을 찾는다.\n",
+        "\t\t\telif check[edges[i][1]][0] > now[1] + 1 or (check[edges[i][1]][0] == now[1] + 1 and check[edges[i][1]][1] > edges[i][2] + edges[i][3]):\n",
+        "\t\t\t\tqueue[rear] = edges[i][1]\n",
+        "\t\t\t\tcheck[edges[i][1]][0] = now[1] + 1\n",
+        "\t\t\t\tcheck[edges[i][1]][1] = edges[i][2] + edges[i][3]\n",
+        "\t\t\t\t\n",
+        "\t\t\t\t'''\n",
+        "\t\t\t\t코드 작성\n",
+        "\t\t\t\t'''\n",
+        "\t\t\t\trear += 1\n",
+        "\n",
+        "# 이미 있는 도시 이름인지 확인한다.\n",
+        "def get_city(name):\n",
+        "\tglobal n\n",
+        "\tfor i in range(n):\n",
+        "\t\tif name == city[i]:\n",
+        "\t\t\treturn i\n",
+        "\tcity[n] = name\n",
+        "\tn += 1\n",
+        "\treturn n - 1\n",
+        "\n",
+        "# 시작\n",
+        "if __name__ == \"__main__\":\n",
+        "\tT = int(input()) # 테스트 케이스 개수\n",
+        "\tfor t in range(1, T+1):\n",
+        "\t\tn = 0; ne = 0\n",
+        "\t\te = int(input())\n",
+        "\t\tfor i in range(e):\n",
+        "\t\t\tcity1, city2, r1, r2 = input().split()\n",
+        "\t\t\tr1 = int(r1)\n",
+        "\t\t\tr2 = int(r2)\n",
+        "\t\t\tr1 %= 24 #24 = 0으로 표시\n",
+        "\t\t\t# 시간이 맞지 않으면 넘긴다.\n",
+        "\t\t\tif (r1 < 18 and r1 > 6) or ((r1 + r2) % 24 > 6 and (r1 + r2) % 24 < 18):# '''코드 작성''':\n",
+        "\t\t\t\tcontinue\n",
+        "\t\t\t\t\n",
+        "\t\t\t#print(city1, city2, r1, r2)\n",
+        "\t\t\tedges[ne][0] = get_city(city1)  # 출발지\n",
+        "\t\t\tedges[ne][1] = get_city(city2)  # 도착지\n",
+        "\t\t\tedges[ne][2] = (r1 + 12) % 24   # 출발 시간 오후 표기\n",
+        "\t\t\tedges[ne][3] = r2               # 도착 시간\n",
+        "\t\t\tne += 1\n",
+        "\t\t\n",
+        "\t\tcity1, city2 = input().split()\n",
+        "\t\tstart = get_city(city1)     # 탐색 시작 지점\n",
+        "\t\tfinish = get_city(city2)    # 탐색 종료 지점\n",
+        "\n",
+        "\t\t# 탐색을 시작한다.\n",
+        "\t\tbfs()\n",
+        "\n",
+        "\t\tprint(f\"Test Case {t}.\")\n",
+        "\n",
+        "\t\t# 도달할 수 있는지 없는지 확인하고 출력한다.\n",
+        "\t\tif rechable:\n",
+        "\t\t\tprint(f\"Vladimir needs {check[finish][0]} litre(s) of blood.\")\n",
+        "\t\telse:\n",
+        "\t\t\tprint(\"There is no route Vladimir can take.\")"
       ],
       "execution_count": null,
       "outputs": []
