Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -103,12 +103,13 @@
         "O-ZSdkmYbmRa",
         "ixkMO17DbmWw",
         "u9tipfTwbmbn",
+        "XK9REonP1NwI",
         "ZPZhedpd1NwI",
         "HEGePEEYxsNm",
         "Zs31oUZxxsg7",
         "jXYx1DRXxsog",
         "2SovrMekxsrx",
-        "71RWUsr01OEe",
+        "8I05magqxsvh",
         "lh6uv54_bdBm",
         "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
@@ -121,7 +122,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyO427Jnfam6S01J8C2toN3k",
+      "authorship_tag": "ABX9TyPPezcg9hdG9PR08nx29cAD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5193,7 +5194,7 @@
         "id": "71RWUsr01OEe"
       },
       "source": [
-        "### **단계 : ===========**"
+        "### 19단계 : 큐, 덱===========**"
       ]
     },
     {
@@ -5202,13 +5203,236 @@
         "id": "0IyI2TgT1OEf"
       },
       "source": [
-        "#### "
+        "####  18258번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "gHcQUk7n1OEf"
+      },
+      "source": [
+        "#선형배열, pop 연산 시 리스트 내의 원소들 인덱스가 한칸씩 땡겨지기 때문에 많은 연산이 필요\n",
+        "#그러므로 linked-list 사용\n",
+        "\n",
+        "import sys\n",
+        "n = int(input())\n",
+        "queue = [] # 큐는 선입 선출의 개념\n",
+        "\n",
+        "first = 0 # linked-list 에서 앞 부분\n",
+        "end = 0 # linked-list 에서 뒷 부분\n",
+        "\n",
+        "for _ in range(n):\n",
+        "\n",
+        "    t = sys.stdin.readline().rstrip('\\n').split()\n",
+        "\n",
+        "    if t[0] == 'push': \n",
+        "        queue.append(int(t[1]))\n",
+        "        end += 1 # 큐의 추가시, linked-list에서 뒷 부분을 뒤로 땡긴다\n",
+        "\n",
+        "    elif t[0] == 'pop':\n",
+        "        if first == end:\n",
+        "            print(-1)\n",
+        "        else:\n",
+        "            print(queue[first])\n",
+        "            first += 1 # 큐의 방출시, linked-list에서 앞 부분을 뒤로 땡긴다\n",
+        "\n",
+        "    elif t[0] == 'size':\n",
+        "        print(end - first)\n",
+        "\n",
+        "    elif t[0] == 'empty':\n",
+        "        if first == end:\n",
+        "            print(1)\n",
+        "        else:\n",
+        "            print(0)\n",
+        "\n",
+        "    elif t[0] == 'front': # 큐의 가장 앞에 있는 수, 즉 제일 먼저 들어온 정수\n",
+        "        if first == end:\n",
+        "            print(-1)\n",
+        "        else:\n",
+        "            print(queue[first])\n",
+        "\n",
+        "    elif t[0] == 'back': # 큐의 가장 뒤에있는 수, 즉 최근에 들어온 정수\n",
+        "        if first == end:\n",
+        "            print(-1)\n",
+        "        else:\n",
+        "            print(queue[end-1])\n",
+        "\n",
+        "    else:\n",
+        "        pass"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LTKckHu0U5FP"
+      },
+      "source": [
+        "####  2164번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EFtjMsYPU5FQ"
+      },
+      "source": [
+        "# pop 연산을 할 시 리스트의 요소가 많으면 연산량이 많아 지므로 linked-list 사용\n",
+        "n = int(input())\n",
+        "\n",
+        "queue = [i for i in range(1, n+1)] # 처음 queue 리스트 생성\n",
+        "\n",
+        "start = 0 # linked-list의 첫 부분\n",
+        "end = n-1 # linked-list의 마지막 부분\n",
+        "\n",
+        "while start != end: # 첫 부분과 마지막 부분이 같아지면 break\n",
+        "    start += 1 # queue 맨위 pop 연산\n",
+        "\n",
+        "    if start == end: # 첫 부분과 마지막 부분이 같아지면 break\n",
+        "        break\n",
+        "\n",
+        "    queue.append(queue[start]) # 두번 째 카드 맨 뒤로 append 연산\n",
+        "    end += 1 # append 연산을 하여 뒷 부분 + 1\n",
+        "    start += 1 # 두번 째 카드를 맨 뒤로 옮겼으므로 시작 부분 + 1\n",
+        "\n",
+        "print(queue[start])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mSQdGSmzU5J8"
+      },
+      "source": [
+        "####  11866번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "De3HkwoFU5J9",
+        "outputId": "bf08d518-e55c-4d64-bf95-6d459ad7835e"
+      },
+      "source": [
+        "# k 명 미만의 사람이 남았을 때도 순서대로 사람을 세어 k 번째 사람을 제거\n",
+        "n, k = map(int, input().split())\n",
+        "\n",
+        "queue = [i for i in range(1, n+1)]\n",
+        "\n",
+        "start = 0\n",
+        "end = n\n",
+        "\n",
+        "res = [] # 제거 된 사람을 담을 리스트\n",
+        "\n",
+        "while (end - start) >= 2: # 사람이 1명이 남을 때 까지 반복\n",
+        "    for _ in range(k-1): # k번째 사람을 찾기까지 반복\n",
+        "        queue.append(queue[start])\n",
+        "        start += 1\n",
+        "        end += 1\n",
+        "\n",
+        "    res.append(queue[start]) # k 번째 사람 제거\n",
+        "    start += 1\n",
+        "\n",
+        "res += queue[start:]\n",
+        "\n",
+        "print('<',end='')\n",
+        "for i in range(len(res)-1):\n",
+        "    print('{0}, '.format(res[i]), end='')\n",
+        "print(res[-1],end='')\n",
+        "print('>')"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5 4\n",
+            "<4, 3, 5, 2, 1>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "14T3PZXwU5PO"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZB0RX-F2U5PO"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6XU-HwBjU5UD"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x2tkgB9CU5UD"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SDiinE2pU5Yx"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Nnpwyf_0U5Yx"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Rm5U7yLyU5dm"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oxBrcFiAU5dn"
       },
       "source": [
         ""
