Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -122,7 +122,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyPPezcg9hdG9PR08nx29cAD",
+      "authorship_tag": "ABX9TyPbhH/Tphpxrt/0QqxR1WTF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5212,6 +5212,7 @@
         "id": "gHcQUk7n1OEf"
       },
       "source": [
+        "# from collections import queue 사용 가능\n",
         "#선형배열, pop 연산 시 리스트 내의 원소들 인덱스가 한칸씩 땡겨지기 때문에 많은 연산이 필요\n",
         "#그러므로 linked-list 사용\n",
         "\n",
@@ -5348,7 +5349,7 @@
         "print(res[-1],end='')\n",
         "print('>')"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5366,7 +5367,7 @@
         "id": "14T3PZXwU5PO"
       },
       "source": [
-        "#### "
+        "####  1966번"
       ]
     },
     {
@@ -5375,7 +5376,45 @@
         "id": "ZB0RX-F2U5PO"
       },
       "source": [
-        ""
+        "import sys\n",
+        "n = int(input())\n",
+        "\n",
+        "def f(x): \n",
+        "    X = int(x)\n",
+        "    s[X-1] += 1\n",
+        "    return X\n",
+        "\n",
+        "for _ in range(n):\n",
+        "    n, m = map(int, sys.stdin.readline().rstrip('\\n').split())\n",
+        "    s = [0] * 10 # 중요도 counting 리스트\n",
+        "    l = list(map(f, sys.stdin.readline().rstrip('\\n').split()))\n",
+        "\n",
+        "    start = 0 # linked-list 사용\n",
+        "    end = n\n",
+        "\n",
+        "    res = 0\n",
+        "    t = m # 지정한 문서의 위치\n",
+        "\n",
+        "    while True:\n",
+        "        if sum(s[l[start]:]) > 0: # 지정한 문서 뒤로 중요도가 큰 수가 있으면 \n",
+        "            l.append(l[start]) # 맨 뒤로 보냄\n",
+        "\n",
+        "            if start == t: # 지정한 문서가 뒤로 보내지면 위치도 변경\n",
+        "                t = end # 맨 마지막 위치\n",
+        "\n",
+        "            start += 1\n",
+        "            end += 1\n",
+        "\n",
+        "        else: # 중요도가 큰 수가 없으므로\n",
+        "            s[l[start]-1] -= 1 #counting 리스트에서 해당 수 -1\n",
+        "            res += 1 # 출력 횟수 +1\n",
+        "\n",
+        "            if t == start: # 지정한 문서가 인쇄 되었다면 종료\n",
+        "                break\n",
+        "\n",
+        "            start += 1\n",
+        "\n",
+        "    print(res)"
       ],
       "execution_count": null,
       "outputs": []
@@ -5386,7 +5425,7 @@
         "id": "6XU-HwBjU5UD"
       },
       "source": [
-        "#### "
+        "####  10866번"
       ]
     },
     {
@@ -5395,7 +5434,99 @@
         "id": "x2tkgB9CU5UD"
       },
       "source": [
-        ""
+        "# 덱은 앞, 뒤로 입력과 방출을 같이 수행하는 형태\n",
+        "# 시간제한이 짧으므로 linked-list를 사용해야 함.\n",
+        "# from collections import deque 사용 가능\n",
+        "import sys\n",
+        "\n",
+        "deque = [0] * 20001 # 덱을 담을 리스트 \n",
+        "\n",
+        "start = 10000 # 시작 지점\n",
+        "end = 10000 # 마지막 지점\n",
+        "\n",
+        "for _ in range(int(input())):\n",
+        "    t = sys.stdin.readline().rstrip('\\n').split() # 입력값 리스트 형태로 바꾸기\n",
+        "    #print('deque : ',deque[start:end+1])\n",
+        "    if t[0] == 'push_front': # 앞에 입력\n",
+        "        if start == end and deque[start] == 0: # 시작과 끝이 같고 내용이 없으면\n",
+        "            deque[start] = int(t[1]) # 값 입력\n",
+        "\n",
+        "        else: # 시작과 끝이 다르거나 원소가 하나라도 있으면\n",
+        "            start -= 1 # 시작지점 앞으로 땡기기\n",
+        "            deque[start] = int(t[1]) # 값 입력\n",
+        "\n",
+        "    elif t[0] == 'push_back': # 뒤에 입력, push_front와 같음\n",
+        "        if start == end and deque[start] == 0: \n",
+        "            deque[end] = int(t[1]) \n",
+        "            \n",
+        "        else: \n",
+        "            end += 1 # 마지막 지점 뒤로 땡기기\n",
+        "            deque[end] = int(t[1])\n",
+        "\n",
+        "    elif t[0] == 'pop_front': # 뒤에 방출\n",
+        "        if start == end: # 시작과 끝이 같고\n",
+        "            if deque[start] == 0: # 원소가 없으면\n",
+        "                print(-1)\n",
+        "                continue\n",
+        "\n",
+        "        print(deque[start])\n",
+        "        deque[start] = 0\n",
+        "\n",
+        "        if start == end: # 시작과 끝이 같으면 넘어감\n",
+        "            continue\n",
+        "        else: # 시작과 끝이 같지 않으면 시작 지점을 뒤로 땡김\n",
+        "            start += 1\n",
+        "\n",
+        "    elif t[0] == 'pop_back':\n",
+        "        if start == end:\n",
+        "            if deque[end] == 0:\n",
+        "                print(-1)\n",
+        "                continue\n",
+        "\n",
+        "        print(deque[end])\n",
+        "        deque[end] = 0\n",
+        "        if start == end: # 시작과 끝이 같으면 넘어감\n",
+        "            continue\n",
+        "        else: # 시작과 끝이 같지 않으면 끝 지점을 앞으로 떙김\n",
+        "            end -= 1\n",
+        "        \n",
+        "    elif t[0] == 'size':\n",
+        "        if start == end: # 시작과 끝이 같고\n",
+        "            if deque[start] == 0: # 원소가 없으면 0\n",
+        "                print(0)\n",
+        "            else: # 원소가 있으면 1\n",
+        "                print(1)\n",
+        "        else: # 원소의 갯수\n",
+        "            print(end-start+1)\n",
+        "\n",
+        "    elif t[0] == 'empty':\n",
+        "        if start == end: \n",
+        "            if deque[start] == 0:\n",
+        "                print(1)\n",
+        "            else:\n",
+        "                print(0)\n",
+        "        else:\n",
+        "            print(0)\n",
+        "        \n",
+        "    elif t[0] == 'front':\n",
+        "        if start == end: # 시작과 끝이 같고\n",
+        "            if deque[start] == 0: # 원소가 없으면\n",
+        "                print(-1) # -1 출력\n",
+        "            else: # 원소가 있으면 시작 지점의 원소 출력\n",
+        "                print(deque[start])\n",
+        "            continue\n",
+        "\n",
+        "        print(deque[start])\n",
+        "\n",
+        "    elif t[0] == 'back':\n",
+        "        if start == end:\n",
+        "            if deque[end] == 0:\n",
+        "                print(-1)\n",
+        "            else:\n",
+        "                print(deque[end])\n",
+        "            continue\n",
+        "        \n",
+        "        print(deque[end])"
       ],
       "execution_count": null,
       "outputs": []
@@ -5406,7 +5537,7 @@
         "id": "SDiinE2pU5Yx"
       },
       "source": [
-        "#### "
+        "####  1021번"
       ]
     },
     {
